2007-10-09  Tomas Cerha  <cerha@brailcom.org>

	* pytis/presentation/spec.py (FieldSpec): New argument and method
	for `completer'.

	* pytis/form/inputfield.py (_Completer): New class.
	(TextField): Use completers for all codebook feilds, as well as
	for fields with `completer' defined.

2007-10-08  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py: Respect `display' for boolean fields.

	* pytis/form/list.py (ListForm._on_incremental_search_key_down):
	Handle empty list.

	* pytis/presentation/spec.py: Backwards compatibility for
	`editable' and `style' fixed.  Color value assertions removed.

2007-10-05  Tomas Cerha  <cerha@brailcom.org>

	* pytis/presentation/field.py (PresentedRow._compute_editability):
	Pass just one argument to the `editable' function.

	* pytis/presentation/_test.py: Define editable function with just
	one argument.

	* pytis/web/form.py: Apply row and field styles.

	* pytis/presentation/spec.py (Color): Define color values directly
	in constants.
	(FieldStyle): Renamed to `Style'.  Default color values changed to
	`None'.  New properties `overstrike' and `underline.
	(FieldSpec): Allow `style' and `editable' functions to take just
	one argument -- the PresentedRow instance.

	* pytis/form/screen.py: Expect color values in `Color' constants
	and allow also color hex-string specifications.

	* pytis/form/_grid.py: Implemented style inheritance and new style
	specifiers.
	(ListTable._cached_value): Pass just one argument to the `style'
	function.

2007-10-04  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py: Improved `display' presentation.

	* pytis/form/list.py (ListForm._create_search_panel): Handle
	prefill correctly.

2007-10-03  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/search.py (SFSDialog._create_choice): Use `wx_choice()'.
	(SFSDialog._create_text_ctrl): Use `wx_text_ctrl()'.

	* pytis/form/screen.py (color_dictionary): Function removed.
	(init_colors): Initialize color database here